Refactor after refactor. Go through a lot of objects mostly events related and fix or cleanup them